@@ -1,3 +1,14 @@
+Wed Sep  7 17:31:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/BiDir_GIOP/BiDirGIOP.h:
+        * tao/BiDir_GIOP/BiDirGIOP.cpp:
+        * tao/BiDir_GIOP/BiDirPolicy_Validator.h:
+        * tao/BiDir_GIOP/BiDir_GIOP.mpc:
+          export file is now generated by tao_idl
+
+        * tao/BiDir_GIOP/bidirgiop_export.h:
+          Removed this file.
+
 Wed Sep  7 17:27:01 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * MPC/modules/IDLHelper.pm:
